cm3 se agregaron datos del estudiante

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  
     <CEnter><h2><font size=+4</font>INFORMACION DEL ESTUDIANTE</h2> </CEnter>     
     
-
+        <CEnter><h2><font size=+1</font> ESTUDIANTE: EDWIN PRADA FIGUEROA </h2></CEnter> 
+            <CEnter><h2><font size=+1</font> SEMESTRE: 4T0 INGENIERIA DE SISTEMAS </h2></CEnter>  
 </body>
 </html>
