--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 
         <center>
             <h1><font size="6">ACTORES RELEVANTES:</font></h1>
+
+            <div style="text-align: center;">
+                <div style="display: inline-block; margin-right: 100px; text-align: center;">
+                    <h3>CILLIAN MURPHY</h3>
+                    <img src="https://www.thefamouspeople.com/profiles/images/cillian-murphy-3.jpg" alt="" style="width: 300px; height: 200px;">
+                </div>
  
         </center>
 
