cm15 se cambio el color de fondo de la pagina

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINA WEB EDWIN</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  
+    <div class="todo">
     <CEnter><h2><font size=+4</font>INFORMACION DEL ESTUDIANTE</h2> </CEnter>     
     
         <CEnter><h2><font size=+1</font> ESTUDIANTE: EDWIN PRADA FIGUEROA </h2></CEnter> 
@@ -74,6 +76,7 @@
                 </div>
 
         </center>
+    </div>
 
 </body>
 </html>
